--- a/src/package.json
+++ b/src/package.json
@@ -14,14 +14,14 @@
     "css-loader": "^6.3.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "mini-css-extract-plugin": "^2.3.0",
-    "node-sass": "^7.0.0",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^16.0.4",
     "style-loader": "^3.3.0",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
     "flickity": "^2.2.2",
-    "flickity-imagesloaded": "^2.0.0"
+    "flickity-imagesloaded": "^2.0.0",
+    "sass": "^1.83.1"
   }
 }
